--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>  
   <groupId>com.sarav</groupId>  
   <artifactId>TomcatMavenApp</artifactId>  
-  <version>V.1</version>
+  <version>3.0</version>
   <packaging>war</packaging>  
   
 </project>  
