updated Pom file for war

--- a/pom.xml
+++ b/pom.xml
@@ -7,5 +7,5 @@ http://maven.apache.org/maven-v4_0_0.xsd">
   <artifactId>myapp</artifactId>  
   <packaging>war</packaging>  
   <version>3.0</version>
-
+  <failOnMissingWebXml>false</failOnMissingWebXml>
 </project>  
