--- a/pom.xml
+++ b/pom.xml
@@ -6,5 +6,19 @@ http://maven.apache.org/maven-v4_0_0.xsd">
   <groupId>com.javatpoint</groupId>  
   <artifactId>myapp</artifactId>  
   <packaging>war</packaging>  
-  <version>3.0</version>
+  <version>2.6</version>
+    <build>
+	<plugins>
+		
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-war-plugin</artifactId>
+			<version>2.6</version>
+			<configuration>
+				<failOnMissingWebXml>false</failOnMissingWebXml>
+			</configuration>
+		</plugin>
+		
+	</plugins>
+  </build>	
 </project>  
