Pushing Terraform DevOps Architecture on Personal Github

--- a/MyPracxTerraform/.gitignore
+++ b/MyPracxTerraform/.gitignore
@@ -26,6 +26,7 @@ terraform.rc
 *.tfstate.lock.info
 
 # Ignore Terraform provider plugins directory
+.terraform/*
 .terraform/
 
 # Ignore generated plan files
