Pushing Terraform DevOps Architecture on Personal Github

--- a/MyPracxTerraform/.gitignore
+++ b/MyPracxTerraform/.gitignore
@@ -26,8 +26,12 @@ terraform.rc
 *.tfstate.lock.info
 
 # Ignore Terraform provider plugins directory
-.terraform/*
 .terraform/
+
+#Ignore Git as well
+
+.git
+.git/
 
 # Ignore generated plan files
 *.tfplan
