--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,58 @@
-.DS_store
+# Ignore .pem files (typically used for SSH keys)
+*.pem
+
+# Ignore Terraform State files
+terraform.tfstate
+terraform.tfstate.backup
+
+# Ignore Terraform crash logs
+crash.log
+
+# Ignore Terraform variables files
+*.tfvars
+
+# Ignore the override files
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+var.tf
+
+# Ignore CLI configuration files
+.terraformrc
+terraform.rc
+
+# Ignore Terraform lock files
+.terraform.lock.hcl
+*.tfstate.lock.info
+
+# Ignore Terraform provider plugins directory
+.terraform/
+
+# Ignore all hidden files and folders
+.*
+!.gitignore  # Ensure that the .gitignore file itself is not ignored
+
+# Ignore generated plan files
+*.tfplan
+
+# Ignore sensitive output files
+*.zip
+*.tar.gz
+
+# Ignore any log files
+*.log
+
+# Ignore the backup files created by Terraform
+*.backup
+*.bak
+
+# Ignore Terraform config JSON files
+*.tf.json
+
+
+#Ignore Ds_Store
+
+.Ds_Store
+#Ignore txt files as well
+password.txt
